--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dhis2-app",
+  "name": "predict-mdrtb",
   "version": "1.0.0",
   "description": "",
   "license": "BSD-3-Clause",
@@ -16,14 +16,19 @@
   },
   "dependencies": {
     "@dhis2/app-runtime": "^3.11.2",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-router-dom": "^5.3.3",
     "i": "^0.3.7",
     "npm": "^10.9.0",
     "prop-types": "^15.8.1",
     "react": "^16.8.6",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "5.3.4",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.0.0"
+    "typescript": "^5.7.2"
   },
   "packageManager": "yarn@1.22.19"
 }
