--- a/package.json
+++ b/package.json
@@ -17,17 +17,25 @@
   "dependencies": {
     "@dhis2/app-runtime": "^3.11.2",
     "@tensorflow/tfjs": "^4.22.0",
+    "@turf/turf": "^7.2.0",
+    "@types/leaflet": "^1.9.16",
+    "@types/leaflet.heat": "^0.2.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "chart.js": "^4.4.7",
     "d3": "^7.9.0",
     "i": "^0.3.7",
+    "leaflet": "^1.9.4",
+    "leaflet-heatmap": "^1.0.0",
+    "leaflet.heat": "^0.2.0",
     "npm": "^10.9.0",
     "prop-types": "^15.8.1",
     "react": "^16.8.6",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^16.8.6",
+    "react-leaflet": "3.2.5",
+    "react-leaflet-heatmap-layer": "^2.0.0",
     "react-router-dom": "5.3.4",
     "react-scripts": "^5.0.1",
     "typescript": "^5.7.2"
