--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@types/babel__core": "^7.20.5"
   },
   "dependencies": {
+    "@dhis2/app-adapter": "^12.6.4",
     "@dhis2/app-runtime": "^3.11.2",
+    "@dhis2/ui": "^10.7.7",
     "@tensorflow/tfjs": "^4.22.0",
     "@turf/turf": "^7.2.0",
+    "@types/d3": "^7.4.3",
     "@types/leaflet": "^1.9.16",
     "@types/leaflet.heat": "^0.2.4",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^16.8.0",
+    "@types/react-dom": "^16.8.0",
     "@types/react-router-dom": "^5.3.3",
     "chart.js": "^4.4.7",
     "d3": "^7.9.0",
@@ -31,9 +34,9 @@
     "leaflet.heat": "^0.2.0",
     "npm": "^10.9.0",
     "prop-types": "^15.8.1",
-    "react": "^16.8.6",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^18.3.1",
     "react-leaflet": "3.2.5",
     "react-leaflet-heatmap-layer": "^2.0.0",
     "react-router-dom": "5.3.4",
