--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/leaflet.heat": "^0.2.4",
     "@types/react": "^16.8.0",
     "@types/react-dom": "^16.8.0",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/react-router-dom": "5",
     "chart.js": "^4.4.7",
     "d3": "^7.9.0",
     "i": "^0.3.7",
@@ -37,6 +37,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-leaflet": "3.2.5",
     "react-leaflet-heatmap-layer": "^2.0.0",
     "react-router-dom": "5.3.4",
